Exercises: Angular, Part 3

--- a/lesson3/examples/src/app/buttons/buttons.component.css
+++ b/lesson3/examples/src/app/buttons/buttons.component.css
@@ -23,3 +23,9 @@ button {
 .copper {
    background: #b87333 ;
 }
+#myContainer{
+   border: 1px black solid;
+   width: 350px;
+   height: 130px;
+
+}
